# meok-eat-mcp

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_Reference.md  Architecture.md  Deployment_Guide.md  Technical_Spec.md
src/meok_eat_mcp/: __init__.py  server.py
tests/: test_server.py
