[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-eat-mcp"
version = "0.1.0"
description = "MEOK EAT — Food Delivery MCP Server (Swiggy/Deliveroo/Uber Eats/DoorDash aggregator)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nicholas Templeman", email = "nicholas@meok.ai"},
]
keywords = ["mcp", "food-delivery", "restaurant", "aggregator", "meok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
meok-eat-mcp = "meok_eat_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/CSOAI-ORG/meok-eat-mcp"
Repository = "https://github.com/CSOAI-ORG/meok-eat-mcp"
Issues = "https://github.com/CSOAI-ORG/meok-eat-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/meok_eat_mcp"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
